manifests/components/contrib/kyverno/overlays/dev/requests-limits-policy.yaml
apiVersion: kyverno.io/v1
kind: ClusterPolicy
metadata:
  name: enforce-resources
spec:
  validationFailureAction: enforce #audit
  background: true
  rules:
    - name: validate-container-resources
      match:
        resources:
          kinds:
            - Pod
      validate:
        message: "CPU and memory requests and limits are required for all containers."
        pattern:
          spec:
            containers:
              - resources:
                  requests:
                    cpu: "?*"
                    memory: "?*"
                  limits:
                    cpu: "?*"
                    memory: "?*"
